k8s/infra-base/monitoring/grafana/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.chenwx.top`)
      kind: Rule
      services:
        - name: grafana-service
          namespace: monitoring
          port: 3000
