k8s/infra-base/monitoring/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - grafana.chenwx.top
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
